# schwachmatt

./: .gitignore  CMakeLists.txt  README.md  build_all.bat  clean.bat  makefile
.github/workflows/: action-perft.yaml
doc/: uci.md
src/: CMakeLists.txt  attacks.cpp  attacks.h  attacks.hpp  bitboard.cpp  bitboard.h  bitboard.hpp  board.cpp  board.h  board.hpp  engine.cpp  engine.hpp  exceptions.hpp  main.cpp  main.h  main.hpp  move.cpp  move.h  move.hpp  movegen.cpp  movegen.h  movegen.hpp  test.cpp  types.h  types.hpp  uci.cpp  uci.hpp  utils.cpp  utils.h  utils.hpp
src/common/: CMakeLists.txt  exceptions.h  types.h  utils.cpp  utils.h
src/engine/: CMakeLists.txt  ___main.h  attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  board.cpp  board.h  exceptions.h  move.cpp  move.h  movegen.cpp  movegen.h  types.h  utils.cpp  utils.h
src/uci/: CMakeLists.txt  uci.cpp  uci.h
test/: CMakeLists.txt  attacks.test.cpp  attacks_test.cpp  bitboard.test.cpp  bitboard_test.cpp  board.test.cpp  board_test.cpp  perft.test.cpp  perft_test.cpp
tests/: board_test.cpp  main_test.cpp  perft_test.cpp  unit_test.cpp
